Navbar: Introduce navbar styles [2/3]
Change-Id: I13d320f72db8a57a221ca143c4d6c01eea1db934
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/xml/themes.xml
+++ b/res/xml/themes.xml
@@ -30,6 +30,11 @@
         android:summary="@string/rgb_accent_picker_summary"
         android:persistent="false" />
 
+    <Preference
+        android:key="theme_navbar_picker"
+        android:title="@string/theme_navbar_picker_title"
+        android:summary="@string/theme_navbar_picker_summary" />
+
     <ListPreference
         android:key="font_picker"
         android:title="@string/font_type_title"
