--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -32,6 +32,10 @@
     <string name="rgb_accent_picker_title">RGB Akzentauswahl</string>
     <string name="rgb_accent_picker_summary">Wähle deine eigene Akzentfarbe</string>
 
+    <!-- Navbar Picker -->
+    <string name="theme_navbar_picker_title">Navbar-Stil</string>
+    <string name="theme_navbar_picker_summary">Wähle den Navigationsleistenstil</string>
+
     <!-- Dark theme -->
     <string name="dark_theme_title">Dunkel</string>
 
