Navbar: Introduce PD navbar style [2/3].
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/layout/navbar_picker.xml
+++ b/res/layout/navbar_picker.xml
@@ -72,6 +72,14 @@
                 android:layout_width="wrap_content"
                 android:layout_marginBottom="20dp"/>
 
+            <include layout="@layout/navbar_pd"
+                android:id="@+id/pd_layout"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/tecno_layout"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginBottom="20dp"/>
+
         </RelativeLayout>
 
     </LinearLayout>
