--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -228,6 +228,7 @@
         <item>@string/theme_navbar_picker_oneplus</item>
         <item>@string/theme_navbar_picker_oneui</item>
         <item>@string/theme_navbar_picker_tecno</item>
+        <item>@string/theme_navbar_picker_pd</item>
     </string-array>
 
     <!-- Navbar style layouts -->
@@ -236,6 +237,7 @@
         <item>oneplus_layout</item>
         <item>oneui_layout</item>
         <item>tecno_layout</item>
+        <item>pd_layout</item>
     </string-array>
 
 </resources>
