--- a/res/layout/navbar_picker.xml
+++ b/res/layout/navbar_picker.xml
@@ -41,9 +41,41 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal">
 
+            <include layout="@layout/navbar_android"
+                android:id="@+id/android_layout"
+                android:layout_centerHorizontal="true"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginBottom="20dp"/>
+
             <include layout="@layout/navbar_asus"
                 android:id="@+id/asus_layout"
                 android:layout_centerHorizontal="true"
+                android:layout_below="@+id/android_layout"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginBottom="20dp"/>
+
+            <include layout="@layout/navbar_moto"
+                android:id="@+id/moto_layout"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/asus_layout"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginBottom="20dp"/>
+
+            <include layout="@layout/navbar_nexus"
+                android:id="@+id/nexus_layout"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/moto_layout"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginBottom="20dp"/>
+
+            <include layout="@layout/navbar_old"
+                android:id="@+id/old_layout"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/nexus_layout"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_marginBottom="20dp"/>
@@ -51,7 +83,7 @@
             <include layout="@layout/navbar_oneplus"
                 android:id="@+id/oneplus_layout"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@+id/asus_layout"
+                android:layout_below="@+id/old_layout"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_marginBottom="20dp"/>
@@ -64,18 +96,26 @@
                 android:layout_width="wrap_content"
                 android:layout_marginBottom="20dp"/>
 
-            <include layout="@layout/navbar_tecno"
-                android:id="@+id/tecno_layout"
+            <include layout="@layout/navbar_pd"
+                android:id="@+id/pd_layout"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/oneui_layout"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_marginBottom="20dp"/>
 
-            <include layout="@layout/navbar_pd"
-                android:id="@+id/pd_layout"
+            <include layout="@layout/navbar_sammy"
+                android:id="@+id/sammy_layout"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@+id/tecno_layout"
+                android:layout_below="@+id/pd_layout"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginBottom="20dp"/>
+
+            <include layout="@layout/navbar_tecno"
+                android:id="@+id/tecno_layout"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/sammy_layout"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_marginBottom="20dp"/>
