--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -96,6 +96,7 @@
         <item>@string/theme_type_google_dark</item>
         <item>@string/theme_type_pitch_black</item>
         <item>@string/theme_type_solarized_dark</item>
+        <item>@string/theme_type_choco_x</item>
     </string-array>
 
     <string-array name="theme_type_values">
@@ -103,6 +104,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
     <!-- Themes schedule -->
@@ -121,6 +123,7 @@
         <item>@string/theme_type_google_dark</item>
         <item>@string/theme_type_pitch_black</item>
         <item>@string/theme_type_solarized_dark</item>
+        <item>@string/theme_type_choco_x</item>
     </string-array>
 
     <string-array name="theme_scheduled_values">
@@ -128,6 +131,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
     <!-- Accent name -->
