--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -34,6 +34,7 @@
         <item>@string/font_type_15</item>
         <item>@string/font_type_16</item>
         <item>@string/font_type_17</item>
+        <item>@string/font_type_18</item>
     </string-array>
 
     <string-array name="font_type_values">
@@ -54,6 +55,7 @@
         <item>15</item>
         <item>16</item>
         <item>17</item>
+        <item>18</item>
     </string-array>
 
     <!-- Adaptive icon shapes -->
