--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -66,6 +66,7 @@
         <item>@string/adaptive_icon_shape_roundedrect</item>
         <item>@string/adaptive_icon_shape_cylinder</item>
         <item>@string/adaptive_icon_shape_hexagon</item>
+        <item>@string/adaptive_icon_shape_square</item>
     </string-array>
 
     <string-array name="adapative_icon_shape_values">
@@ -75,6 +76,7 @@
         <item>4</item>
         <item>5</item>
         <item>6</item>
+        <item>7</item>
     </string-array>
 
     <!-- Statusbar icons -->
