--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -126,8 +126,10 @@
     <string name="theme_restore_no_backup_summary">Keine Sicherung verfügbar</string>
     <string name="theme_restore_popup_title">Wische seitwärts, um weitere Sicherungen anzuzeigen</string>
     <string name="theme_name_exist_warning">Dieser Sicherungsname ist bereits vorhanden. Gib einen neuen ein.</string>
+    <string name="theme_rename_dialog_title">UI-Stil umbenennen</string>
     <string name="theme_button_apply_theme">UI-Stil wiederherstellen</string>
     <string name="theme_button_delete_theme">UI-Stil löschen</string>
+    <string name="theme_switch_persistent_title">Schalterstellungen merken</string>
     <string name="theme_switch_restore_theme_color">Hintergrundfarbe</string>
     <string name="theme_switch_restore_accent_color">Akzentfarbe</string>
     <string name="theme_switch_restore_font_type">Schrifttyp</string>
