--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -36,6 +36,7 @@
         <item>@string/font_type_17</item>
         <item>@string/font_type_18</item>
         <item>@string/font_type_19</item>
+        <item>@string/font_type_20</item>
     </string-array>
 
     <string-array name="font_type_values">
@@ -58,6 +59,7 @@
         <item>17</item>
         <item>18</item>
         <item>19</item>
+        <item>20</item>
     </string-array>
 
     <!-- Adaptive icon shapes -->
